# rust-discord-bot

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/commands/: attachment_handler.rs  image_effects.rs  mod.rs
