[package]
name = "image-discord-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.12.0", default-features = false, features = ["builder", "client", "gateway", "model", "utils", "collector", "framework"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "full"] }
poise = { version = "0.6"}
env_logger = { version =  "0.10.1" }
reqwest = { version = "0.12.4" , default-features = false, features = ["blocking"]}
num-complex = { version = "0.4.6" }
bytes = { version = "1.6.0" }
image = { version = "0.24.8", default-features = false, features = [
  "gif",
  "jpeg",
  "ico",
  "png",
  "pnm",
  "tga",
  "tiff",
  "webp",
  "bmp",
  "hdr",
  "dxt",
  "dds",
  "farbfeld",
] }
